--- a/survey2.html
+++ b/survey2.html
@@ -6,7 +6,7 @@
      title
   </title>
   <meta charset="utf-8">
-  <link href="./survey-form/surveyform.css" rel="stylesheet"
+  <link href="./Survey2.css" rel="stylesheet"
   type="text/css" >
 </head>
 <body>
